--- a/package.json
+++ b/package.json
@@ -15,15 +15,18 @@
     "@react-navigation/native": "^5.8.9",
     "@react-navigation/stack": "^5.12.6",
     "expo": "~39.0.2",
+    "expo-chart-kit": "^1.2.4",
     "expo-status-bar": "~1.0.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.4.tar.gz",
+    "react-native-chart-kit": "^6.6.1",
     "react-native-elements": "^3.0.0-alpha.1",
     "react-native-gesture-handler": "~1.7.0",
     "react-native-masked-text": "^1.13.0",
     "react-native-material-ripple": "^0.9.1",
     "react-native-screens": "~2.10.1",
+    "react-native-svg": "^12.1.0",
     "react-native-web": "~0.13.12",
     "styled-components": "^5.2.1"
   },
